--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.css">
+
+  <style>
+    .highlighted{
+      background-color: grey;
+      display: block;
+      }
+  </style>
+  
 </head>
 <body>
   <app-root>Loading...</app-root>
