--- a/src/index.html
+++ b/src/index.html
@@ -1,38 +1,37 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Forms</title>
-  <base href="/">
-
-  {{#unless environment.production}}
-  <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
-  {{/unless}}
+  <base href="/"> {{#unless environment.production}}
+  <script src="/ember-cli-live-reload.js" type="text/javascript"></script> {{/unless}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.css">
 
   <style>
-    .highlighted{
+    .highlighted {
       background-color: grey;
       display: block;
-      }
+    }
   </style>
-  
+
 </head>
+
 <body>
   <app-root>Loading...</app-root>
 
-    {{#each scripts.polyfills}}
-    <script src="{{.}}"></script>
-    {{/each}}
-    <script>
+  {{#each scripts.polyfills}}
+  <script src="{{.}}"></script> {{/each}}
+  <script>
       System.import('system-config.js').then(function () {
         System.import('main');
       }).catch(console.error.bind(console));
     </script>
 
-  
+
 
 </body>
+
 </html>
