--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,29 @@
       background-color: grey;
       display: block;
     }
+    .col-left{
+      float:left;
+      display:block;
+      width:200px;
+    }
+    .col-right{
+      float:left;
+      display:block;
+      min-width: 200px;
+      max-width: 70%;
+    }
+    .fieldset{
+      display:block;      
+      clear:both;
+      background-color: #d6ebfc;
+      overflow:hidden;
+      border: 1px solid #FFF;
+      padding: 10px;
+    }
+    label {
+      font-weight: normal;
+      margin-right:12px;
+    }
   </style>
 
 </head>
