--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://www.pearpages.com/dist/" />
+<meta http-equiv="refresh" content="0; url=http://www.pearpages.com/embed-form-components/dist/" />
